Remove obsolete jvm flags from pal.bat